Triend different features

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,8 @@
     background-color: #ffffff;
   }
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+  cursor: pointer;
+}
